# warc2text

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cld2_main.cc  debug-filters.sh  decode_main.cpp  lcs.cpp  naive.cpp  tags_filters  wagnerfischer.cpp  warc2text_main.cc  xh_scanner.cpp  xh_scanner.h  xh_scanner_demo.cpp
.github/workflows/: ubuntu.yml
easyconfigs/: nlpl-warc2text-1.2.0-foss-2021a.eb  nlpl-warc2text-1.3.0-LUMI.eb  nlpl-warc2text-1.3.0-foss-2021a.eb  nlpl-warc2text-1.5.0-foss-2021a.eb  uchardet-0.0.7-LUMI.eb  uchardet-0.0.7-foss-2021a.eb
easyconfigs/lumi/: libzip-1.7.3.eb
src/: CMakeLists.txt  bilangwriter.cc  bilangwriter.hh  decompress.hh  deferred.cc  deferred.hh  entities.c  entities.cc  entities.h  entities.hh  html.cc  html.hh  html_test.cc  lang.cc  lang.hh  lang_cld2.cc  lang_fasttext.cc  pdfextract.cc  pdfextract.hh  record.cc  record.hh  text.cc  text.hh  text_test.cc  util.cc  util.hh  warc.cc  warc.hh  warcpreprocessor.cc  warcpreprocessor.hh  warcreader.cc  warcreader.hh  xh_scanner.cc  xh_scanner.hh  zipreader.cc  zipreader.hh
tests/: checksums.txt  hello-world.json.expected
